fix display issues and wrap up

--- a/css/main.css
+++ b/css/main.css
@@ -140,7 +140,7 @@ ul{
 }
 
 #solutionList{
-    bottom: 40%;
+    bottom: 32%;
 }
 
 #answerList li{
@@ -154,12 +154,13 @@ ul{
 }
 
 #solutionList li{
-    display: inline-block;
+    display: inline-table;
     background-color: #ddd;
-    font-size: 2.25em;
-    margin: 0 15px;
-    width: 50px;
+    font-size: 2.875em;
+    margin: 0 1%;
+    width: 12%;
     height: 50px;
+    vertical-align:middle;
 }
 
 .equa-list-item, .ans-field{
@@ -178,7 +179,7 @@ ul#resultList {
     position: relative;
     padding: 10px;
     list-style: none;
-    font-size: 2.75em;
+    font-size: 2.25em;
     text-align: left;
     width: 80%;
     display: block;
@@ -188,11 +189,6 @@ ul#resultList {
 span.res.res-user-ans {
     color: #F00;
     margin-right:30px;
-}
-
-span.res.res-user-ans::after {
-    content: ' (incorrect)';
-    font-size: 20px;
 }
 
 span.res.res-ans{
@@ -230,11 +226,11 @@ span.res.res-ans{
 
 #gameName{
     font-size: 5em;
-    margin-top: 70px
+    margin-top: 40px
 }
 
 #gameResults{
-    font-size: 3em;
+    font-size: 2em;
 }
 
 input#startBtn {
@@ -251,7 +247,7 @@ input#startBtn {
 
 .equa-list-item.vertical .ques-second{
     position:relative;
-    left:-26px;
+    left:-20px;
 }
 
 .draggable {
@@ -259,6 +255,29 @@ input#startBtn {
     font: bold 16px Helvetica, Arial, Sans-serif;
     text-align: center;
     border: 3px solid #669;
+}
+
+@media (max-width: 800px) {
+    ul#resultList{
+        font-size: 1.75em;
+    }
+}
+
+@media (max-width: 700px) {
+    body{
+        font-size:12px;
+    }
+    ul#resultList{
+        font-size: 1.25em;
+    }
+}
+
+
+
+@media (max-width: 600px) and (orientation: portrait) { 
+    span.res.res-user-ans {
+        margin-right: 5px;
+    }
 }
 
 
